--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="D:\web\fake-human-circle-img.png"></td>
+                <td><img src="https://github.com/RitikGariya/Web.-Dev./blob/main/fake-human-circle-img.png"></td>
                 <td><h1>RITIK GARIYA</h1></td>
             </tr>
         </table>
