--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <td>Gupta</td>
                 </tr>
                 <tr>
-                    <td>Ritik</td>
-                    <td>Gariya</td>
+                    <td>Abhishek</td>
+                    <td>Agarwal</td>
                 </tr>
                 
             </tbody>
