--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            
         </ol>
         <a href="https://www.youtube.com/"><strong>Youtube</strong></a>
-        <a href="D:\web\personal.html">MY INFO</a>
+        <a href="personal.html">MY INFO</a>
         <table>
             <thead>
                 <tr>
