--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="Web.-Dev./crop-circle.png"></td>
+                <td><img src="image/img.png"></td>
                 <td><h1>RITIK GARIYA</h1></td>
             </tr>
         </table>
